[2017-01-23]
- Proper HCI usage for quadtree
- Added qtplain

[2017-01-23]
- Moved project to org.tinpin
 

[2017-01-07]
v 1.3.5 
======= 
 - Fixed rare problem with postfix creation. This solves a problem
   with kd-queries and slightly reduces memory consumption. See issue #7.
 

[2016-09-19]
- Changed structure to standard maven structure
- Changed License to Apache License 2.0
- Renamed project from CritBit to zoodb-indexes
- Added quadtree and R*Tree implementations

[2016-01-04]
- Added .travis.yml

v 1.3.4
=======
[2015-10-20]
- Merged CB64 and CB64COW
- Implemented resetable iterators

v 1.3.3
=======
[2015-10-11]
- Fixed 64COW iterators returning empty Entry for queries that shouldn't return anything. 
- Added CHANGELOG
- Pushed to v1.3.3-SNAPSHOT