@@ -25,29 +25,34 @@ public interface DistanceFunction {
 	public static CenterDistance CENTER = new CenterDistance();
 	public static EdgeDistance EDGE = new EdgeDistance();
 	// The square root is costly, and generally not required for sorting.
+	@Deprecated
 	public static DistanceFunction CENTER_SQUARE = DistanceFunction::centerSquareDistance;
 	// The square root is costly, and generally not required for sorting.
+	/** SQRT should be quit cheap nowadays, do we have any tests that confirm demonstrate
+	 * an improvement? (tzaeschke) */
+	@Deprecated
 	public static DistanceFunction EDGE_SQUARE = DistanceFunction::edgeSquareDistance;
 
 	double dist(double[] center, double[] min, double[] max);
 
 	/**
 	 * Some algorithm use this method on the entries containing user supplied values.
-	 * This can be overridden if the min/max coordinates only represent the bounding-box of the object.
+	 * This can be overridden if the min/max coordinates only represent the 
+	 * bounding-box of the object.
 	 * 
 	 * If your entry is actually a sphere, a car, an human or a cat, you may need this.
 	 */
 	default double dist(double[] center, RectangleEntry<?> entry) {
 		return dist(center, entry.lower(), entry.upper());
 	}
-	
+
 	/**
 	 * This class calculates the distance to a rectangular shaped object.
 	 * 
 	 * This class completely ignores the center given as parameter to the interface.
 	 * 
-	 * TODO: maybe we could get rid of the center parameter altogether and always let the DistanceFunction
-	 *       hold it's reference points?
+	 * TODO: maybe we could get rid of the center parameter altogether and always let 
+	 *       the DistanceFunction hold it's reference points?
 	 */
 	public static class RectangleDist implements DistanceFunction {
 		private final double[] lower;
@@ -75,7 +80,7 @@ public interface DistanceFunction {
 			return dist;
 		}
 	}
-	
+
 	/**
 	 * Special wrapper class which takes the inverse or the given function.
 	 * Can be used to get the farthest neighbors using the nearest neighbor algorithm.
@@ -107,7 +112,7 @@ public interface DistanceFunction {
 			return 1 / d;
 		}
 	}
-	
+
 	public static class CenterDistance implements DistanceFunction {
 
 		@Override
@@ -120,7 +125,7 @@ public interface DistanceFunction {
 			return Math.sqrt(dist);
 		}
 	}
-	
+
 	public static class EdgeDistance implements DistanceFunction {
 
 		@Override
@@ -138,7 +143,7 @@ public interface DistanceFunction {
 			return Math.sqrt(dist);
 		}
 	}
-	
+
 	public static double centerSquareDistance(double[] center, double[] min, double[] max) {
 		double dist = 0;
 		for (int i = 0; i < center.length; i++) {
@@ -147,7 +152,7 @@ public interface DistanceFunction {
 		}
 		return dist;
 	}
-	
+
 	public static double edgeSquareDistance(double[] center, double[] min, double[] max) {
 		double dist = 0;
 		for (int i = 0; i < center.length; i++) {
@@ -161,5 +166,5 @@ public interface DistanceFunction {
 		}
 		return dist;
 	}
-	
+
 }
