@@ -278,13 +278,12 @@ public class RTree<T> implements RectangleIndex<T> {
 		int level = 0;
 		while (node != root && node.isUnderfull()) {
 			ArrayList<Entry<T>> entries = node.getEntries();
-			RTreeNodeDir<T> parent = node.getParent();
-			parent.removeChildByIdentity(node);
-			node = parent;
+			node.getParent().removeChildByIdentity(node);
 			nNodes--;
 			for (int i = 0; i < entries.size(); i++) {
 				insertAtDepth(entries.get(i), level);
 			}
+			node = node.getParent();
 			level++;
 		}
 		if (root.getEntries().size() == 1 && root instanceof RTreeNodeDir) {
@@ -343,20 +342,27 @@ public class RTree<T> implements RectangleIndex<T> {
 		return new RTreeQueryKnn<>(this, center, k, dist);
 	}
 	
-	public Iterable<RectangleEntryDist<T>> queryRangedNearestNeighbor(double[] center, DistanceFunction dist,
+	public Iterable<RectangleEntryDist<T>> queryRangedNearestNeighbor(
+			double[] center, DistanceFunction dist,
 			DistanceFunction closestDist, double[] minBound, double[] maxBound) {
-		return queryRangedNearestNeighbor(center, dist, closestDist, new Filter.RectangleIntersectFilter(minBound, maxBound));
+		return queryRangedNearestNeighbor(center, dist, closestDist, 
+				new Filter.RectangleIntersectFilter(minBound, maxBound));
 	}
 	
 	/**
-	 * This methods returns an Iterable which returns the nodes by a combined range and nearest number search.
+	 * This methods returns an Iterable which returns the nodes by a combined range and 
+	 * nearest number search.
 	 * The Iterator supports the {@code Iterator.remove()} method. 
 	 * 
 	 * @param center       Target position passed as parameter to the distance functions. 
-	 *                     Can be {@code null} if your distance function supports it (like {@code DistanceFunction.RectangleDist}).
-	 * @param dist         Distance function used to compare entries (example: {@code DistanceFunction.EDGE} or {@code DistanceFunction.CENTER})
-	 * @param closestDist  Distance of the closest point in a given rectangle  (example: {@code DistanceFunction.EDGE} but *not* {@code DistanceFunction.CENTER})
-	 * @param filter       Filter to limit the results for range queries (example: {@code new Filter.RectangleIntersectFilter(min, max)})
+	 *                     Can be {@code null} if your distance function supports 
+	 *                     it (like {@code DistanceFunction.RectangleDist}).
+	 * @param dist         Distance function used to compare entries 
+	 * 				       (example: {@code DistanceFunction.EDGE} or {@code DistanceFunction.CENTER})
+	 * @param closestDist  Distance of the closest point in a given rectangle  
+	 *                     (example: {@code DistanceFunction.EDGE} but *not* {@code DistanceFunction.CENTER})
+	 * @param filter       Filter to limit the results for range queries 
+	 *                     (example: {@code new Filter.RectangleIntersectFilter(min, max)})
 	 * @return             An Iterable which lazily calculates the nearest neighbors. 
 	 */
 	public Iterable<RectangleEntryDist<T>> queryRangedNearestNeighbor(double[] center, DistanceFunction dist,
@@ -371,6 +377,7 @@ public class RTree<T> implements RectangleIndex<T> {
 		};
 	}
 	
+	@Override
 	public String toStringTree() {
 		StringBuilder sb = new StringBuilder();
 		toStringTree(sb, root, depth-1);
