@@ -18,7 +18,6 @@ package org.tinspin.index.rtree;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 
 import java.util.ArrayList;
@@ -44,18 +43,20 @@ public class RTreeMixedQueryTest {
 	@Test
 	public void test() {
 		RTree<String> tree = RTree.createRStar(3);
-		
+
 		int N_ELEMENTS = 100000;
 		for (int i = 0; i < N_ELEMENTS; i++) {
 			double[] position = randDouble(3);
 			assert tree.queryExact(position, position) == null;
 			tree.insert(position, "#" + i);
 		}
-		
-		Iterable<RectangleEntryDist<String>> q = tree.queryRangedNearestNeighbor(new double[] { 1, 1, 1 }, DistanceFunction.CENTER_SQUARE, DistanceFunction.EDGE_SQUARE,
+
+		Iterable<RectangleEntryDist<String>> q = tree.queryRangedNearestNeighbor(
+				new double[] { 1, 1, 1 }, 
+				DistanceFunction.CENTER_SQUARE, DistanceFunction.EDGE_SQUARE,
 				new double[] { 0.5, 0.5, 0.5 }, new double[] { 1, 1, 1 });
-		
-		
+
+
 		double lastDistance = 0;
 		int maxQueueSize = 0;
 		int nElements = 0;
@@ -69,7 +70,7 @@ public class RTreeMixedQueryTest {
 			lastDistance = e.dist();
 			nElements++;
 			maxQueueSize = Math.max(maxQueueSize, ((RTreeMixedQuery) iterator).queueSize());
-			
+
 			if (true) {
 				iterator.remove();
 				assertEquals(tree.size(), N_ELEMENTS - nElements);
@@ -84,9 +85,10 @@ public class RTreeMixedQueryTest {
 	private void perfTestNN(RTree<String> tree) {
 		int k = tree.size() / 8;
 		double[] center = new double[] { 1, 1, 1 };
-		
+
 		{
-			Iterable<RectangleEntryDist<String>> q = tree.queryRangedNearestNeighbor(center, DistanceFunction.EDGE,
+			Iterable<RectangleEntryDist<String>> q = tree.queryRangedNearestNeighbor(
+					center, DistanceFunction.EDGE,
 					DistanceFunction.EDGE, Filter.ALL);
 			RTreeQueryKnn<String> res = tree.queryKNN(center, k, DistanceFunction.EDGE);
 			// test that we get the same results
@@ -101,9 +103,9 @@ public class RTreeMixedQueryTest {
 			}
 			assertFalse(res.hasNext());
 		}
-		
+
 		fillProcessorCache();
-		
+
 		long timeRef = timeOf(() -> {
 			RTreeQueryKnn<String> res = tree.queryKNN(center, k, DistanceFunction.EDGE);
 			int cnt = 0;
@@ -114,11 +116,12 @@ public class RTreeMixedQueryTest {
 			}
 			assertEquals(k, cnt);
 		});
-		
+
 		fillProcessorCache();
-		
+
 		long timeMixed = timeOf(() -> {
-			Iterable<RectangleEntryDist<String>> q = tree.queryRangedNearestNeighbor(center, DistanceFunction.EDGE,
+			Iterable<RectangleEntryDist<String>> q = tree.queryRangedNearestNeighbor(
+					center, DistanceFunction.EDGE,
 					DistanceFunction.EDGE, Filter.ALL);
 			int cnt = 0;
 			if (false) {
@@ -142,12 +145,12 @@ public class RTreeMixedQueryTest {
 					break;
 			}
 		});
-		
-		
-		
+
+
+
 		System.out.println("timeMixed=" + timeMixed + ", timeRef=" + timeRef + " # speedup:" + (timeRef / (double)timeMixed));
 	}
-	
+
 	private void fillProcessorCache() {
 		// 20MB
 		int[] mem = new int[1024 * 1024 * 20];
